test/types/file/freadNoInt.good
freadNoInt.chpl:5: error: read failed: value not read
